Fixed hamburger, mobile dark mode btn area, custom drawer transition

--- a/src/components/navbar/CustomDrawer.css
+++ b/src/components/navbar/CustomDrawer.css
@@ -23,7 +23,7 @@
     right: 0;
     z-index: 1000;
     transform: translateX(100%);
-    transition: transform 225ms cubic-bezier(0, 0, 0.2, 1);
+    transition: all 225ms cubic-bezier(0, 0, 0.2, 1);
     /* transition: transform 225ms cubic-bezier(0, 0, 0.2, 1); */
     
     height: 100%;
